--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
   },
   "dependencies": {
     "@inlet/react-pixi": "^1.2.12",
-    "axios": "^0.18.0",
+    "axios": "^0.18.1",
     "express": "^4.16.3",
     "if-env": "^1.0.4",
     "mongoose": "^5.3.16",
-    "pixi.js": "^5.2.1"
+    "pixi.js": "^5.2.1",
+    "react-router-dom": "^5.1.2",
+    "styled-components": "^5.1.0"
   }
 }
