--- a/package.json
+++ b/package.json
@@ -21,11 +21,14 @@
   },
   "dependencies": {
     "@inlet/react-pixi": "^1.2.12",
+    "@material-ui/core": "^4.9.10",
     "axios": "^0.18.1",
     "bootstrap": "^4.4.1",
     "express": "^4.16.3",
     "if-env": "^1.0.4",
     "mongoose": "^5.3.16",
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0",
     "pixi.js": "^5.2.1",
     "react-bootstrap": "^1.0.0",
     "react-router-dom": "^5.1.2",
