--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^7.2.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-pixi-fiber": "^0.14.0",
     "react-scripts": "3.4.1"
   },
   "scripts": {
