--- a/client/package.json
+++ b/client/package.json
@@ -6,6 +6,8 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "pixi-spine": "^2.1.8",
+    "pixi.js": "^5.2.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-pixi-fiber": "^0.14.0",
