--- a/client/src/libs/pixi-spine-master/package.json
+++ b/client/src/libs/pixi-spine-master/package.json
@@ -53,5 +53,9 @@
     "ts-helpers": "~1.1.2",
     "typedoc": "^0.9.0",
     "typescript": "^3.5.3"
+  },
+  "dependencies": {
+    "pixi.js": "^5.2.1",
+    "yarn": "^1.22.4"
   }
 }
