--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "pixi.js": "^5.2.1",
     "react-bootstrap": "^1.0.0",
     "react-router-dom": "^5.1.2",
-    "styled-components": "^5.1.0"
+    "styled-components": "^5.1.0",
+    "typescript": "^3.8.3"
   }
 }
