--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "@inlet/react-pixi": "^1.2.12",
     "@material-ui/core": "^4.9.10",
     "axios": "^0.18.1",
+    "bcrypt": "^4.0.1",
     "bootstrap": "^4.4.1",
+    "dotenv": "^8.2.0",
     "express": "^4.16.3",
     "if-env": "^1.0.4",
     "mongoose": "^5.3.16",
