--- a/package.json
+++ b/package.json
@@ -25,11 +25,15 @@
     "axios": "^0.18.1",
     "bcrypt": "^4.0.1",
     "bootstrap": "^4.4.1",
+    "connect-mongo": "^3.2.0",
     "dotenv": "^8.2.0",
     "express": "^4.16.3",
+    "express-session": "^1.17.0",
     "if-env": "^1.0.4",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.3.16",
     "passport": "^0.4.1",
+    "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "pixi.js": "^5.2.1",
     "react-bootstrap": "^1.0.0",
