--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "pixi.js": "^5.2.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-iframe": "^1.8.0",
     "react-pixi-fiber": "^0.14.0",
     "react-scripts": "3.4.1"
   },
