--- a/package.json
+++ b/package.json
@@ -36,8 +36,11 @@
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "pixi.js": "^5.2.1",
+    "react": "^16.13.1",
     "react-bootstrap": "^1.0.0",
+    "react-dom": "^16.13.1",
     "react-iframe": "^1.8.0",
+    "react-native": "^0.62.2",
     "react-router-dom": "^5.1.2",
     "styled-components": "^5.1.0",
     "typescript": "^3.8.3"
