--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "@inlet/react-pixi": "^1.2.12",
     "@material-ui/core": "^4.9.10",
+    "@material-ui/styles": "^4.9.10",
     "axios": "^0.18.1",
     "bcrypt": "^4.0.1",
     "bootstrap": "^4.4.1",
