--- a/client/package.json
+++ b/client/package.json
@@ -4,6 +4,12 @@
   "private": true,
   "proxy": "http://localhost:3001",
   "dependencies": {
+    "axios": "^0.18.1",
+    "@material-ui/core": "^4.9.10",
+    "styled-components": "^5.1.0",
+    "react-bootstrap": "^1.0.0",
+    "react-native": "^0.62.2",
+    "react-router-dom": "^5.1.2",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
